--- a/Test/Pkg/LZ/Test.lpi
+++ b/Test/Pkg/LZ/Test.lpi
@@ -10,7 +10,6 @@
         <MainUnitHasTitleStatement Value="False"/>
         <MainUnitHasScaledStatement Value="False"/>
         <SaveJumpHistory Value="False"/>
-        <SaveFoldState Value="False"/>
       </Flags>
       <SessionStorage Value="None"/>
       <Title Value="Test"/>
@@ -24,17 +23,17 @@
           <Version Value="11"/>
           <PathDelim Value="\"/>
           <Target>
-            <Filename Value="..\..\Out\$(TargetCPU)-$(TargetOS)\$(LCLWidgetType)\Release\Test"/>
+            <Filename Value="..\..\Out\$(TargetCPU)-$(TargetOS)\Release\Test"/>
           </Target>
           <SearchPaths>
             <IncludeFiles Value="$(ProjOutDir);..\..\Src"/>
             <OtherUnitFiles Value="..\..\Src"/>
-            <UnitOutputDirectory Value="..\..\Out\$(TargetCPU)-$(TargetOS)\$(LCLWidgetType)\Release"/>
+            <UnitOutputDirectory Value="..\..\Out\$(TargetCPU)-$(TargetOS)\Release"/>
           </SearchPaths>
           <CodeGeneration>
             <SmartLinkUnit Value="True"/>
             <Optimizations>
-              <OptimizationLevel Value="2"/>
+              <OptimizationLevel Value="3"/>
             </Optimizations>
           </CodeGeneration>
           <Linking>
@@ -63,21 +62,23 @@
         <PackageName Value="GlvSuperDocs"/>
       </Item>
       <Item>
-        <PackageName Value="adFCL"/>
+        <PackageName Value="laztestinsight"/>
+      </Item>
+      <Item>
+        <PackageName Value="FCL"/>
       </Item>
     </RequiredPackages>
     <Units>
       <Unit>
-        <Filename Value="Test.ppr"/>
-        <FRMtype Value="0"/>
-        <IsPartOfProject Value="True"/>
-      </Unit>
-      <Unit>
-        <Filename Value="..\..\Src\SupDoc.Test.pas"/>
+        <Filename Value="Test.lpr"/>
         <IsPartOfProject Value="True"/>
       </Unit>
       <Unit>
         <Filename Value="..\..\Src\SupDoc.Fakes.pas"/>
+        <IsPartOfProject Value="True"/>
+      </Unit>
+      <Unit>
+        <Filename Value="..\..\Src\SupDoc.Test.pas"/>
         <IsPartOfProject Value="True"/>
       </Unit>
     </Units>
@@ -86,16 +87,17 @@
     <Version Value="11"/>
     <PathDelim Value="\"/>
     <Target>
-      <Filename Value="..\..\Out\$(TargetCPU)-$(TargetOS)\$(LCLWidgetType)\Debug\Test"/>
+      <Filename Value="..\..\Out\$(TargetCPU)-$(TargetOS)\Debug\Test"/>
     </Target>
     <SearchPaths>
       <IncludeFiles Value="$(ProjOutDir);..\..\Src"/>
       <OtherUnitFiles Value="..\..\Src"/>
-      <UnitOutputDirectory Value="..\..\Out\$(TargetCPU)-$(TargetOS)\$(LCLWidgetType)\Debug"/>
+      <UnitOutputDirectory Value="..\..\Out\$(TargetCPU)-$(TargetOS)\Debug"/>
     </SearchPaths>
     <Parsing>
       <SyntaxOptions>
         <IncludeAssertionCode Value="True"/>
+        <UseAnsiStrings Value="False"/>
       </SyntaxOptions>
     </Parsing>
     <CodeGeneration>
@@ -112,6 +114,7 @@
     </CodeGeneration>
     <Linking>
       <Debugging>
+        <DebugInfoType Value="dsDwarf3"/>
         <UseHeaptrc Value="True"/>
         <TrashVariables Value="True"/>
       </Debugging>
